[package]
name = "mdns-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
env_logger = "0.11.5"
futures-util = "0.3.31"
# No need for OpenSSL TLS/DNSSEC stuff in default features
# Can't use hickory-resolver or async-std-resolver as mdns feature isn't exposed
hickory-client = { version = "0.24.1", default-features = false, features = ["mdns"] }
hickory-proto = "0.24.1"
hickory-server = "0.24.1"
log = "0.4.22"
network-interface = "2.0.0"
once_cell = "1.20.2"
tokio = "1.42.0"
